default/objects/NVMContactWorld__CallEndEvent__c/NVMContactWorld__CallEndEvent__c.object-meta.xml
<CustomObject>
    <description>Represents a call ending in Call Centre, and contains all the information to create a task in Salesforce.</description>
    <label>Call End Event</label>
    <nameField>
        <label>Call End Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call End Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>