default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__ACD__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__ACD__c</fullName>
    <label>ACD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>