default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__CallDurationInSeconds__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CallDurationInSeconds__c</fullName>
    <label>Call Duration</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>