default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__CallLegInfoJson__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CallLegInfoJson__c</fullName>
    <label>Call Leg Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>