default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__CallObject__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CallObject__c</fullName>
    <label>Call Object Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>