default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__CallRingTimeInSeconds__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CallRingTimeInSeconds__c</fullName>
    <label>Call Ring Time</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>