default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__CallTalkTimeInSeconds__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CallTalkTimeInSeconds__c</fullName>
    <label>Call Talk Time</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>