default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__CallType__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CallType__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>