default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__ContactWorld_Number__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__ContactWorld_Number__c</fullName>
    <label>ContactWorld Number</label>
    <type>Phone</type>
</CustomField>