default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Customer_Number__c</fullName>
    <label>Customer Number</label>
    <type>Phone</type>
</CustomField>