default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__CW_Call_End_Reason__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CW_Call_End_Reason__c</fullName>
    <label>CW Call End Reason</label>
    <length>20</length>
    <type>Text</type>
</CustomField>