default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__CW_Call_End_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CW_Call_End_Time__c</fullName>
    <label>CW Call End Time</label>
    <type>DateTime</type>
</CustomField>