default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__Service_Name__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Service_Name__c</fullName>
    <label>Service Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>