default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__Subject__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>