default/objects/NVMContactWorld__CallEndEvent__c/fields/NVMContactWorld__Was_Call_Recorded__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Was_Call_Recorded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Was Recorded</label>
    <type>Checkbox</type>
</CustomField>